2011-01-25 mmichaud <michael.michaud@free.fr>
    * Bugfix in ColorThemingStyle : when a numeric attribute contains
      only nulls, or less values than breaks, classification methods fail and
      break following classification processes
        * com.vividsolutions.jump.workbench.ui.renderer.style.attributeclassifications
              .JenksBreaksColorThemingState
              .MaximalBreaksColorThemingState
              .MeanSTDvColorThemingState
              .QuantileColorThemingState
              .RangeColorThemingState
        * org.openjump.core.attributeoperations.Classifier1D

2011-01-22 Matthias Scholz <ms@jammerhund.de>
	* small GUI fix in FontChooser, now the example text is better visible
	* AdvancedMeasureTool enhancement:
		If the user starts a measurement with a single click, all the old
		measurements will be deleted. But if the user starts the measurement
		with a double click, then nothing is deleted. So you can make multiple
		measurements very easy without any additional menuitems and mouseclicks
		in the menu.

2011-01-19 Matthias Scholz <ms@jammerhund.de>
	* AdvancedMeasureOptionsPanel
		* Bugfix: if you have the cancel button pressed in the FontChooser, then
			an exception was thrown, because of a null-Font
	* MeasurementStyle
		* format pattern for area/length is now adaptive; thaks to Michaël for his idea
	* AdvancedMeasureOptionsPanel, MeasurementStyle, MeasureLayerFinder
		* now you can select individually if summary length and/or area should
			be painted; thanks to Jukka Rahkonen for his idea
	* AdvancedMeasureTool
		* now you can pan and zoom during measurment
	* CoordinateListMetrics
		* now you can get the distance for a closed geometry
		* this was the reason for different distance in the statusbar and while
			area measurement mode in the AdvancedMeasureTool

2011-01-16 Matthias Scholz <ms@jammerhund.de>
	* MeasureLayerFinder.featuresChanged()
		* Bugfix: the LayerListener now only works if the change was on